[package]
name = "ipscannr"
version = "1.1.0"
edition = "2021"
authors = ["ipscannr contributors"]
license = "MIT"
description = "A terminal-based IP scanner with adaptive TUI - hack the planet!"
repository = "https://github.com/yourusername/ipscannr"
keywords = ["network", "scanner", "ip", "tui", "terminal"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full", "sync", "time", "net", "io-util"] }
dns-lookup = "2"
ipnetwork = "0.20"
surge-ping = "0.8"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1.3"
anyhow = "1"
thiserror = "2"
rand = "0.8"
lazy_static = "1.5"

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
